@@ -63,7 +63,7 @@ T_213mp4_broken_pixel_dimensions:4ab136f8ed75613590de7ded9d4bbb81:passed:2005091
 T_214one_frame_avi:8b5003e62e885d084c555f80020f1b30:passed:20051004-192755:0.033334586
 T_215X_codec_extradata_avi:3876bc3722144c16d4b1aec484d98c34-3fabc505fdd377c05ce4557b1bc13545:passed:20051004-194707:0.082329916
 T_216mp4_editlists:c67d7eda9eda56e99cf4b9a85d2aa0f2:passed:20051118-191453:0.040645125
-T_217file_identification:ef3c502529537c1d3699d0e0487751c3-713a636c5dbc8b6c8da4913f8e74904d-2f46885aa787280d131392107f38ed2f-3a36c2b67bad8d0cb6090545c0b80aa6-a275e9abb3cc154307663d5ca6fce615-3187bcbc4eb44d78f9eab3d4ca6ed787-d7678dc91cba91a946c22e5b96f3b3b6-3f60e3a03129d1e4610ae668459457cc-c170654ad0688c40fc9e2ceeb9ef0b9f-6b44c4e351ac48b7fdb63355c65783eb-5c1571f8aa8d488a8fded13da5b543a2-66888ac269acd18d05fe455bce696345-89726ad978c5dcdf5275e070e36fff58-760f02a07e97f484c8f3f8aedcaa7b51-6b7149a5774a37d214b8085c6409aab3-15beba0108723bff77bf8d88876f8f31-f917620b6bb93673307d70018ff7b2be-9ee9ebe7eda146299f0240e0357d9aee-c348802c3135082e43bd8d4852f086e5-3f953cbe9cedd498aff0765315876f86-e592a5d28c92ebb23fe6d7ea901ec0a9-f997737ca7eff867d33ee58af611e741:passed:20051209-180815:0.841701857
+T_217file_identification:ef3c502529537c1d3699d0e0487751c3-713a636c5dbc8b6c8da4913f8e74904d-4770085113fdcd6c041d9d4ba6a89675-9bfda6dd1fa3e7b5d3c28ff2508b4f7d-a275e9abb3cc154307663d5ca6fce615-3187bcbc4eb44d78f9eab3d4ca6ed787-d7678dc91cba91a946c22e5b96f3b3b6-3f60e3a03129d1e4610ae668459457cc-c170654ad0688c40fc9e2ceeb9ef0b9f-6b44c4e351ac48b7fdb63355c65783eb-5c1571f8aa8d488a8fded13da5b543a2-66888ac269acd18d05fe455bce696345-89726ad978c5dcdf5275e070e36fff58-760f02a07e97f484c8f3f8aedcaa7b51-6b7149a5774a37d214b8085c6409aab3-15beba0108723bff77bf8d88876f8f31-f917620b6bb93673307d70018ff7b2be-9ee9ebe7eda146299f0240e0357d9aee-c348802c3135082e43bd8d4852f086e5-3f953cbe9cedd498aff0765315876f86-e592a5d28c92ebb23fe6d7ea901ec0a9-f997737ca7eff867d33ee58af611e741:passed:20051209-180815:0.841701857
 T_218theora:59986cbebb1a61762c16ae591ae8c345-88d9297a7f549c68aea49c3b4abf007a:passed:20060428-105054:0.71619861
 T_219srt_short_timecodes:1350b59f405cabe1107c752f009f2f2a:passed:20060926-112658:0.213195421
 T_220ass_with_comments_at_start:4aad786f675e15a5efd623cb8d822cff:passed:20060926-120101:0.839985533
@@ -190,7 +190,7 @@ T_341vob_interlaced_h264:94f3e7791ee247b7326a42237ea00520:passed:20120304-163313
 T_342m2ts_interlaced_h264_from_arte:8c4d727aa228e4738c598e3ddc9d4571:passed:20120304-165917:3.86679733
 T_343m2ts_interlaced_h264_match_of_the_day:fdab49f2f33981826793bb66aab97ca5:passed:20120304-171453:2.873804415
 T_344microdvd_recognition:ok:passed:20120304-175209:0.082792556
-T_345flag_enabled:efe07b85cd349a040ed79402256bd6ea-89e9b90881c73d55ac4eda07e20effe5:passed:20120304-181150:0.135757829
+T_345flag_enabled:d49c16c0e158406db043e8b75e5b5c75-89e9b90881c73d55ac4eda07e20effe5:passed:20120304-181150:0.135757829
 T_347h264_misdetected_as_ac3:4dcd5541b962ce1d534e04481deadbec:passed:20120305-160017:2.617159557
 T_348srt_negative_timecodes2:4fc486c9de77896d9f8c2cf997d88d8c:passed:20120307-115726:0.085988974
 T_349h264_interlaced_default_duration:7e80cf1649489adf8f65a7dc8cef7387-8dd834ba266997a82b84bc377a1d6e63-8dd834ba266997a82b84bc377a1d6e63-eeccf13c0da25f3efc0858ed8d89346c:passed:20120307-184849:5.764120431
