@@ -1,5 +1,9 @@
 2012-04-09  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: new feature: The verbose identification mode for
+	Matroska files will now includes the "segment UID", the "next
+	segment UID" and "previous segment UID" elements.
+
 	* mkvmerge: enhancement: In "--split parts:" mode mkvmerge will
 	use the output file name as it is instead of adding a running
 	number to it if all the ranges to be kept are to be written into a
